objects/agf__ADM_Parent_Work__c.object
<CustomObject>
    <fields>
        <fullName>agf__Child_Scheduled_Build__c</fullName>
        <formula>agf__Child_Work__r.agf__Scheduled_Build__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Scheduled Build</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Child_Scrum_Team__c</fullName>
        <formula>agf__Child_Work__r.agf__Scrum_Team__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Scrum Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Child_Sprint__c</fullName>
        <formula>agf__Child_Work__r.agf__Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Child_Subject__c</fullName>
        <formula>agf__Child_Work__r.agf__Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Child_Work_Closed__c</fullName>
        <formula>agf__Child_Work__r.agf__Closed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The closed flag for the child work record.  Will be 0 or 1 depending on the status of the work record.</inlineHelpText>
        <label>Child Work Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Child_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Parent Work Records</relationshipLabel>
        <relationshipName>Child_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Created_Date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is child a duplicate of parent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Parent_Scheduled_Build__c</fullName>
        <formula>agf__Parent_Work__r.agf__Scheduled_Build__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Scheduled Build</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Scrum_Team__c</fullName>
        <formula>agf__Parent_Work__r.agf__Scrum_Team__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Scrum Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Sprint__c</fullName>
        <formula>agf__Parent_Work__r.agf__Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Work_Closed__c</fullName>
        <formula>agf__Parent_Work__r.agf__Closed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The closed flag for the parent work record. Will be 0 or 1 depending on the status of the work record.</inlineHelpText>
        <label>Parent Work Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Work_Subject__c</fullName>
        <formula>agf__Parent_Work__r.agf__Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Work Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Child Work Records</relationshipLabel>
        <relationshipName>Parent_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Work</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Parent Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Works</pluralLabel>
    
</CustomObject>